syntax = "proto3";

option java_multiple_files = true;
option java_package = "distribuidos.proto";
option java_outer_classname = "ServiceProto";

package distribuidos;

service ConvertidorUrls {
  rpc ConvertirUrls (ConvertirUrlsRequest) returns (ConvertirUrlsResponse) {}
}

service ConvertidorOffice {
  rpc ConvertirArchivos (ConvertirArchivosRequest) returns (ConvertirArchivosResponse) {}
}

message ConvertirUrlsRequest {
  repeated string urls = 1;  // Cambiado de 'url' a 'urls' y ahora es una lista
  string nombre = 2;
  string tipo = 3;
}

message ConvertirUrlsResponse {
  repeated string resultados = 1;  // Ya era una lista
}

message ConvertirArchivosRequest {
  repeated string archivos = 1;  // Cambiado de 'archivo' a 'archivos' y ahora es una lista
  string nombre = 2;
  string tipo = 3;
}

message ConvertirArchivosResponse {
  repeated string resultados = 1;  // Ya era una lista
}